--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,15 @@
 title: "My Course Site"
 description: "A site documenting my learnings from an online course."
-baseurl: ""
-url: "https://fasakinhenry.github.io/ALX_AICE"
-theme: minima
+baseurl: "" # the subpath of your site, e.g., /blog
+url: "https://fasakinhenry.github.io/course-site" # the base hostname & protocol for your site
+theme: minimal-mistakes-jekyll
+remote_theme: mmistakes/minimal-mistakes
 
-# Navigation links
-nav_links:
-  - title: "Home"
-    url: "/"
-  - title: "Week 1: Onboarding"
-    url: "/week1-onboarding/"
-  - title: "Week 2"
-    url: "/week2/"
+# Minimal Mistakes settings
+sidebar:
+  nav: "navigation" # Use the navigation.yml file in the _data folder
+
+# Repository settings
+plugins:
+  - jekyll-feed
+  - jekyll-seo-tag
